testing/tests/into/optional_into_non_optional.stderr
error: Inter-struct cannot 'into' an optional into a non-optional value.
 --> tests/into/optional_into_non_optional.rs:7:24
  |
7 |     pub normal: Option<String>,
  |                        ^^^^^^

error: Inter-struct cannot 'into' an optional into a non-optional value.
 --> tests/into/optional_into_non_optional.rs:8:26
  |
8 |     pub optional: Option<Option<String>>,
  |                          ^^^^^^

error[E0063]: missing fields `normal` and `optional` in initializer of `IntoStruct`
 --> tests/into/optional_into_non_optional.rs:5:8
  |
5 | #[into("crate::IntoStruct")]
  |        ^^^^^^^^^^^^^^^^^^^ missing `normal` and `optional`
